--- a/CraftingInterpreterC/CraftingInterpreterC.vcxproj
+++ b/CraftingInterpreterC/CraftingInterpreterC.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="compiler.c" />
     <ClCompile Include="debug.c" />
     <ClCompile Include="hashtable.c" />
+    <ClCompile Include="local.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="memory.c" />
     <ClCompile Include="native.c" />
@@ -146,6 +147,7 @@
     <ClInclude Include="compiler.h" />
     <ClInclude Include="debug.h" />
     <ClInclude Include="hashtable.h" />
+    <ClInclude Include="local.h" />
     <ClInclude Include="memory.h" />
     <ClInclude Include="native.h" />
     <ClInclude Include="object.h" />
